web/src/app/page/chat-page/chat-page.component.scss
.chat-page {
    background: white;
    height: 100%;
    display: flex;
    flex-direction: row;
}

$break-small: 40em;
$break-large: 64em;
.other-chats, .profile {
    background: #eee;

    @media screen and (max-width: $break-large) {
        width: 0;
    }

    @media screen and (min-width: $break-large) {
        width: 25vw;
    }
}

.chat-content {
    flex: 1 1 auto;
    height: 100%;
    display: flex;
    flex-direction: column;
    
    @media screen and (min-width: $break-large) {
        border-left: 1px solid rgba(0, 0, 0, .25);
        border-right: 1px solid rgba(0, 0, 0, .25);
    }

    .chat-history {
        flex: 10;
        padding: 16px;
        overflow-y: auto;
    }
    
    .chat-box {
        flex: 1;
        display: flex;
        flex-direction: row;
        border-top: 1px solid rgba(0, 0, 0, .25);
        padding-top: 1px;

        input {
            width: 90%;
            border: none;
            padding-left: 24px;
        }

        button {
            width: 10%;
        }
    }
}

.speech-divider {
    padding: 5px 5px;
}

.speech-wrapper {
  padding: 30px 40px;
  .bubble {
    width: 240px;
    height: auto;
    display: block;
    background: #f5f5f5;
    border-radius: 4px;
    position: relative;
    margin: 0 0 25px;
    &.alt {
      margin: 0 0 0 60px;
      float: right;
      background: #88BDBC;
    }
    .txt {
      padding: 8px 55px 8px 14px;
      .name {
        font-weight: 600;
        font-size: 12px;
        margin: 0 0 4px;
        color: #88bdbc;
        span {
          font-weight: normal;
          color: #b3b3b3;
        }
        &.alt {
          color: #ffffff;
        }
      }
      .message {
        font-size: 12px;
        margin: 0;
        color: #2b2b2b;
      }
    }

    .bubble-arrow {
      position: absolute;
      width: 0;
      bottom: 42px;
      left: -16px;
      height: 0;
      &.alt {
        right: -2px;
        bottom: 40px;
        left: auto;
      }
    }

    .bubble-arrow:after {
      content: '';
      position: absolute;
      border: 0 solid transparent;
      border-top: 9px solid #f5f5f5;
      border-radius: 0 20px 0;
      width: 15px;
      height: 30px;
      transform: rotate(145deg);
    }

    .bubble-arrow.alt:after {
      transform: rotate(45deg) scaleY(-1);
      border-top: 9px solid #88bdbc;
    }
  }
}

.profile {
    height: 100%;
    display: flex;
    flex-direction: column;
    align-items: center;
    justify-content: center;
}

